--- a/study-project-backend/src/main/resources/application.yaml
+++ b/study-project-backend/src/main/resources/application.yaml
@@ -4,3 +4,19 @@ spring:
     url: jdbc:mysql://localhost:3306/study?useUnicode=true&characterEncoding=utf-8
     username: root
     password: 123456
+  mail:
+    host: smtp.163.com
+    username: 19817561326@163.com
+    password: DOVVCMEYGEXHSRSC
+    port: 465
+    properties:
+      from: 19817561326@163.com
+      mail:
+        smtp:
+          socketFactory:
+            class: javax.net.ssl.SSLSocketFactory
+  data:
+    redis:
+      database: 0
+      host: localhost
+      port: 6379
